--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,44 @@
+:root {
+	--spaceColor: #041229;
+	--medColor: #0D2345;
+	--textColor: #D4E3FA;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: var(--spaceColor);
+  color: var(--textColor);
+  font-size:18px;
+  font-family: "Anonymous Pro", monospace;
+}
+button {
+	background-color: #ffffff11;
+	font-size:1rem;
+	color: var(--textColor);
+	border: 4px solid var(--textColor);
+	padding: 1rem 2rem;
+	margin: .5rem;
+}
+button:hover {
+	background-color: #ffffff33;
+	cursor: pointer;
+}
+h1 {
+	letter-spacing: .1rem;
+}
+
+.appWrapper {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+#NeoJson {
+	display: none;
+}
+.asteroidContainer .asteroid {
+	stroke: var(--textColor);
+	stroke-width: 4px;
+	fill: var(--medColor);
 }
